--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "categories": [
         "Programming Languages", "Snippets"
     ],
+    "icon": "images/icon.png",
     "keywords": [
 		"tbscript",
 		"tbosdt",
