Icon file link fixed

--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "categories": [
         "Programming Languages", "Snippets"
     ],
-    "icon": "https://github.com/willasm/tbscript/blob/master/images/icon.png",
+    "icon": "images/icon.png",
     "keywords": [
 		"tbscript",
 		"tbosdt",
