--- a/package.json
+++ b/package.json
@@ -6,8 +6,8 @@
     "author": {
         "name": "William McKeever"
     },
-	"license": "MIT - SEE LICENSE IN LICENSE.md",
-    "version": "1.0.9",
+    "license": "MIT - SEE LICENSE IN LICENSE.md",
+    "version": "1.1.0",
     "engines": {
         "vscode": "^1.61.0"
     },
@@ -16,15 +16,15 @@
     ],
     "icon": "images/icon.png",
     "keywords": [
-		"tbscript",
-		"tbosdt",
-		"tbos",
-		"tbcmd",
-		"terabyte",
+        "tbscript",
+        "tbosdt",
+        "tbos",
+        "tbcmd",
+        "terabyte",
         "tbosdtw",
         "tbosdtw64",
         "script"
-	],
+    ],
     "main": "./src/extension.js",
     "activationEvents": [
         "onStartupFinished",
@@ -32,20 +32,19 @@
         "onCommand:tbscript.run"
     ],
     "bugs": {
-      "url": "https://github.com/willasm/tbscript/issues",
-      "email": "willmck63@gmail.com"
+        "url": "https://github.com/willasm/tbscript/issues",
+        "email": "willmck63@gmail.com"
     },
     "homepage": "https://github.com/willasm/tbscript/blob/master/README.md",
     "repository": {
         "type": "git",
         "url": "https://github.com/willasm/tbscript.git"
-      },
+    },
     "capabilities": {
         "hoverProvider": "true"
     },
     "contributes": {
-        "commands": [
-            {
+        "commands": [{
                 "command": "tbscript.run.internal",
                 "title": "TeraByte Script: Run Script in Internal TBCMD",
                 "when": "editorTextFocus || editorLangId == tbscript || resourceLangId == tbscript"
@@ -55,69 +54,78 @@
                 "title": "TeraByte Script: Run Script in External TBCMD",
                 "when": "editorTextFocus || editorLangId == tbscript || resourceLangId == tbscript"
             }
-            ],
+        ],
         "menus": {
-            "commandPalette": [
-              {
-                "command": "tbscript.run.internal",
-                "when": "editorLangId == tbscript"
-              },
-              {
-                "command": "tbscript.run.external",
-                "when": "editorLangId == tbscript"
-              }
+            "commandPalette": [{
+                    "command": "tbscript.run.internal",
+                    "when": "editorLangId == tbscript"
+                },
+                {
+                    "command": "tbscript.run.external",
+                    "when": "editorLangId == tbscript"
+                }
             ]
-          },
-        "keybindings": [
-        	{
-	            "command": "tbscript.run.internal",
-	            "key": "f6",
-	            "when": "editorLangId == tbscript || resourceLangId == tbscript"
-	        },
-        	{
+        },
+        "keybindings": [{
+                "command": "tbscript.run.internal",
+                "key": "f6",
+                "when": "editorLangId == tbscript || resourceLangId == tbscript"
+            },
+            {
                 "command": "tbscript.run.external",
                 "key": "shift+f6",
                 "when": "editorLangId == tbscript || resourceLangId == tbscript"
             }
-            ],
+        ],
         "configuration": {
             "type": "object",
             "title": "TeraByte Script Language",
             "properties": {
-                "tbscript.tbosdt.exe": {
-                "type": "string",
-                "default": "tbosdtw64.exe",
-                "linux": "tbosdt",
-                "markdownDescription": "Full path and filename to your **tbosdtw.exe** or **tbosdtw64.exe** file."
+                "tbscript.executable": {
+                    "type": "string",
+                    "default": "tbosdtw64.exe",
+                    "linux": "tbosdt",
+                    "markdownDescription": "Full path and filename to your **tbosdtw.exe** or **tbosdtw64.exe** file."
                 }
             }
         },
-        "snippets": [
-            {
+        "snippets": [{
                 "language": "tbscript",
                 "path": "./src/snippets/tbscript.json"
-            }
-        ],
-        "languages": [
-            {
-                "id": "tbscript",
-                "aliases": [
-                    "TeraByte Script",
-                    "tbscript"
-                ],
-                "extensions": [
-                    ".tbs",
-                    ".inc"
-                ],
-                "configuration": "./src/syntaxes/language-configuration.json"
-            }
-        ],
-        "grammars": [
+            },
             {
                 "language": "tbscript",
-                "scopeName": "source.tbscript",
-                "path": "./src/syntaxes/tbscript.tmLanguage.json"
+                "path": "./src/snippets/constants.json"
+            },
+            {
+                "language": "tbscript",
+                "path": "./src/snippets/keywords.json"
+            },
+            {
+                "language": "tbscript",
+                "path": "./src/snippets/subroutines.json"
+            },
+            {
+                "language": "tbscript",
+                "path": "./src/snippets/tbcmd.json"
             }
-        ]
+        ],
+        "languages": [{
+            "id": "tbscript",
+            "aliases": [
+                "TeraByte Script",
+                "tbscript"
+            ],
+            "extensions": [
+                ".tbs",
+                ".inc"
+            ],
+            "configuration": "./src/syntaxes/language-configuration.json"
+        }],
+        "grammars": [{
+            "language": "tbscript",
+            "scopeName": "source.tbscript",
+            "path": "./src/syntaxes/tbscript.tmLanguage.json"
+        }]
     }
 }
